Logger Optimized with DB
